bilingual about page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,8 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About / À propos</a>
+            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/apropos">À propos</a>
           </nav>
         </header>
       </div>
