--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,9 +1,9 @@
 <form accept-charset="UTF-8" action="https://getsimpleform.com/messages?form_api_token=7cef49fcc573f77c5e6ab8f48a48f725" method="post">
   <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
   <!-- <input type='hidden' name='redirect_to' value='<the complete return url e.g. http://fooey.com/thank-you.html>' /> -->
-  <input type="email" name="email" placeholder="Your Email">
-  <input type="text" name="name" placeholder="Your Name">
-  <textarea name="message" rows="6" cols="50">Your message...</textarea>
+  <input type="email" name="email" placeholder="Your Email"><br />
+  <input type="text" name="name" placeholder="Your Name"><br />
+  <textarea name="message" rows="6" cols="50" placeholder="Your message..."></textarea><br />
   <input type="hidden" name="utf8" value="✓">
   <button type="submit">Submit</button>
 </form>
