--- a/_layouts/blog_by_tag.html
+++ b/_layouts/blog_by_tag.html
@@ -4,7 +4,7 @@ layout: default
 
 {% capture page_subtitle %}Articles by tag{% endcapture %}
 
-{% include title_header.html title=page.name subtitle=page_subtitle %}
+<h1>{{ page.name }}</h1>
 
 <div class="text-justify">
   {% if site.tags[page.slug] %}
